# contact

./: .gitignore  pyproject.toml
contact_book/: db.sqlite3  test.py
contact_book/contact_book/: asgi.py  settings.py  urls.py  wsgi.py
contact_book/contacts/: admin.py  forms.py  models.py  permissions.py  urls.py  views.py
contact_book/contacts/migrations/: 0001_initial.py  0002_contact_owner_contactgroup_owner.py  0003_alter_contact_phone_number_and_more.py
contact_book/contacts/templates/: base-auth.html  base.html
contact_book/contacts/templates/admin/: manage_users.html
contact_book/contacts/templates/contacts/: contact_list.html
contact_book/contacts/templates/contacts/includes/: contact_actions.html  contact_form.html
contact_book/contacts/templates/registration/: login.html  register.html
